--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <body>
 
         <h1>Welcome</h1>
-        <p>My first website deploy</p>
+        <p>My first website Deploy</p>
     </body>
 </html>
